[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/scenes/Updater/assets/script/updater.gd" type="Script" id=1]
[ext_resource path="res://source/scenes/common/BootUp.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://source/scenes/common/assets/font/RedHatDisplay-Black.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://source/scenes/common/assets/font/Ubuntu-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://source/scenes/common/assets/font/Ubuntu-Bold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
use_mipmaps = true
use_filter = true
font_data = SubResource( 5 )

[node name="Updater" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BootUp" parent="." instance=ExtResource( 2 )]

[node name="Contents" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 240.0

[node name="Label" type="Label" parent="Contents"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "BubbleClient Hub is outdated!"
align = 1

[node name="Label2" type="RichTextLabel" parent="Contents"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -103.0
margin_right = 200.0
margin_bottom = -68.0
grow_horizontal = 2
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Please install latest version [url=https://github.com/bubblefish-dev/bubbleclient-hub/releases/latest/]HERE[/url][/center]"
text = "Please install latest version HERE"

[node name="Continue" type="RichTextLabel" parent="Contents"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -81.0
margin_right = 200.0
margin_bottom = -32.0
custom_colors/default_color = Color( 1, 1, 1, 0.392157 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center][url={}][Continue without updating][/url][/center]"
meta_underlined = false
text = "[Continue without updating]"

[connection signal="is_ready" from="BootUp" to="." method="_on_BootUp"]
[connection signal="meta_clicked" from="Contents/Label2" to="." method="_on_update_clicked"]
[connection signal="meta_clicked" from="Contents/Continue" to="." method="_on_Continue_meta_clicked"]
